# claude-mission-panel

./: .gitignore  electron-builder.yml  electron.vite.config.ts  index.html  mcp-bridge.mjs  mp.mjs  package-lock.json  package.json  tsconfig.json
assets/: icon.icns
docs/plans/: 2026-03-16-claude-mission-panel-design.md  2026-03-16-implementation-plan.md
docs/superpowers/plans/: 2026-03-17-tauri-rebuild.md  2026-03-18-servo-movement-fast-screenshots.md
docs/superpowers/specs/: 2026-03-18-servo-movement-fast-screenshots-design.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  input.rs  main.rs  mcp_server.rs  mcp_tools.rs  screenshot.rs  tts.rs
src/canvas/: AnnotationLayer.tsx  animations.ts
src/hud/: HUD.tsx  PromptBar.tsx  StatusPill.tsx
src/main/: agent.ts  index.ts  overlay.ts
src/main/tools/: command.ts  keyboard.ts  mcp-server.ts  mouse.ts  screenshot.ts
src/main/voice/: tts.ts  wakeword.ts  whisper.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: main.tsx
src/renderer/src/canvas/: AnnotationLayer.tsx  animations.ts
src/renderer/src/hud/: HUD.tsx  PromptBar.tsx  StatusPill.tsx
src/styles/: hud.css
src/types/: screenshot-desktop.d.ts  whisper-node.d.ts
